# BinaxEngine

./: CMakeLists.txt  LICENSE  README.md  runbat.txt
assets/shaders/: basic.frag  basic.vert  gizmo.frag  gizmo.vert  grid.frag  grid.vert  outline.frag  screen.vert  screen_fog.frag  skybox.frag  skybox.vert
resources/: binax_engine.rc
src/: main.cpp
src/Editor/: EditorUI.cpp  EditorUI.h
src/Graphics/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Primitives.cpp  Primitives.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h
src/Scene/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  SceneManager.cpp  SceneManager.h
